EUCA-7733 experiment Test fixed max-width (necessary to make CSS overflow ellipsis work) in the keypair table that has only two columns and plenty of space.

--- a/static/css/eucalyptus.css
+++ b/static/css/eucalyptus.css
@@ -1422,7 +1422,7 @@ table.display tr.glow td.sorting_3 {
 
 /* Have to target these instances specifically, as the same class is used elsewhere */
 
-.dataTables_wrapper .twist {
+.dataTables_wrapper .twist, .dataTables_wrapper span{
   display: inline-block;
   padding: 3px 0 3px 20px;
   background: transparent url(../images/plus-minus-small.png) no-repeat left top;
